force_buy_v2.txt
python :   File "C:\Users\arnab\OneDrive\Documents\agy\ai-trading-bot\diagnose_morning.py", line 11
At line:1 char:1
+ python diagnose_morning.py 2>&1 | Out-File -Encoding utf8 force_buy_v ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (  File "C:\User...ng.py", line 11:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    FORCE_BUY_HIST = b"""
                     ^^^^
SyntaxError: bytes can only contain ASCII literal characters
